--- a/index-8.html
+++ b/index-8.html
@@ -91,191 +91,9 @@ San Francisco, USA </a>
 <div class="it-header-menu it-dropdown-menu">
 <nav class=it-menu-content>
 <ul>
-<li class="has-dropdown p-static">
-<a href=index.html>Home</a>
-<div class="it-submenu submenu has-home-img">
-<div class=it-homemenu-wrapper>
-<div class="row gx-6 row-cols-1 row-cols-md-2 row-cols-lg-2 row-cols-xl-5">
-<div class="col home-img">
-<div class="home-img-thumb home-img-overly mb-20">
-<img src="assets/img/menu/home-1.jpg" alt>
-<div class=home-img-btn>
-<a class=it-btn-sm href=index.html>
-<span class=text-one>Multi Page</span>
-</a>
-<a class=it-btn-sm href=index-one-page.html>
-<span class=text-one>One Page</span>
-</a>
-</div>
-</div>
-<div class="home-img-content text-center">
-<h4 class=home-img-title>
-<a href=index.html>Saas Landing</a>
-</h4>
-</div>
-</div>
-<div class="col home-img">
-<div class="home-img-thumb home-img-overly mb-20">
-<img src="assets/img/menu/home-2.jpg" alt>
-<div class=home-img-btn>
-<a class=it-btn-sm href=index-2.html>
-<span class=text-one>Multi Page</span>
-</a>
-<a class=it-btn-sm href=index-2-one-page.html>
-<span class=text-one>One Page</span>
-</a>
-</div>
-</div>
-<div class="home-img-content text-center">
-<h4 class=home-img-title>
-<a href=index-2.html>Data analytics</a>
-</h4>
-</div>
-</div>
-<div class="col home-img">
-<div class="home-img-thumb home-img-overly mb-20">
-<img src="assets/img/menu/home-3.jpg" alt>
-<div class=home-img-btn>
-<a class=it-btn-sm href=index-3.html>
-<span class=text-one>Multi Page</span>
-</a>
-<a class=it-btn-sm href=index-3-one-page.html>
-<span class=text-one>One Page</span>
-</a>
-</div>
-</div>
-<div class="home-img-content text-center">
-<h4 class=home-img-title>
-<a href=index-3.html>Payment Gateway</a>
-</h4>
-</div>
-</div>
-<div class="col home-img">
-<div class="home-img-thumb home-img-overly mb-20">
-<img src="assets/img/menu/home-4.jpg" alt>
-<div class=home-img-btn>
-<a class=it-btn-sm href=index-4.html>
-<span class=text-one>Multi Page</span>
-</a>
-<a class=it-btn-sm href=index-4-one-page.html>
-<span class=text-one>One Page</span>
-</a>
-</div>
-</div>
-<div class="home-img-content text-center">
-<h4 class=home-img-title>
-<a href=index-4.html>CRM Software</a>
-</h4>
-</div>
-</div>
-<div class="col home-img">
-<div class="home-img-thumb home-img-overly mb-20">
-<img src="assets/img/menu/home-5.jpg" alt>
-<div class=home-img-btn>
-<a class=it-btn-sm href=index-5.html>
-<span class=text-one>Multi Page</span>
-</a>
-<a class=it-btn-sm href=index-5-one-page.html>
-<span class=text-one>One Page</span>
-</a>
-</div>
-</div>
-<div class="home-img-content text-center">
-<h4 class=home-img-title>
-<a href=index-5.html>Security Software</a>
-</h4>
-</div>
-</div>
-<div class="col home-img">
-<div class="home-img-thumb home-img-overly mb-20">
-<img src="assets/img/menu/home-6.jpg" alt>
-<div class=home-img-btn>
-<a class=it-btn-sm href=index-6.html>
-<span class=text-one>Multi Page</span>
-</a>
-<a class=it-btn-sm href=index-6-one-page.html>
-<span class=text-one>One Page</span>
-</a>
-</div>
-</div>
-<div class="home-img-content text-center">
-<h4 class=home-img-title>
-<a href=index-6.html>
-AI Text Generator
-</a>
-</h4>
-</div>
-</div>
-<div class="col home-img">
-<div class="home-img-thumb home-img-overly mb-20">
-<img src="assets/img/menu/home-7.jpg" alt>
-<div class=home-img-btn>
-<a class=it-btn-sm href=index-7.html>
-<span class=text-one>Multi Page</span>
-</a>
-<a class=it-btn-sm href=index-7-one-page.html>
-<span class=text-one>One Page</span>
-</a>
-</div>
-</div>
-<div class="home-img-content text-center">
-<h4 class=home-img-title>
-<a href=index-7.html>SEO Agency</a>
-</h4>
-</div>
-</div>
-<div class="col home-img">
-<div class="home-img-thumb home-img-overly mb-20">
-<img src="assets/img/menu/home-8.jpg" alt>
-<div class=home-img-btn>
-<a class=it-btn-sm href=index-8.html>
-<span class=text-one>Multi Page</span>
-</a>
-<a class=it-btn-sm href=index-8-one-page.html>
-<span class=text-one>One Page</span>
-</a>
-</div>
-</div>
-<div class="home-img-content text-center">
-<h4 class=home-img-title>
-<a href=index-8.html>Digital Marketing</a>
-</h4>
-</div>
-</div>
-<div class="col home-img">
-<div class="home-img-thumb home-img-overly mb-20">
-<img src="assets/img/menu/home-9.jpg" alt>
-<div class=home-img-btn>
-<a class=it-btn-sm href=index-9.html>
-<span class=text-one>Multi Page</span>
-</a>
-<a class=it-btn-sm href=index-9-one-page.html>
-<span class=text-one>One Page</span>
-</a>
-</div>
-</div>
-<div class="home-img-content text-center">
-<h4 class=home-img-title>
-<a href=index-9.html>AI Image Generator</a>
-</h4>
-</div>
-</div>
-<div class="col home-img">
-<div class="home-img-thumb coming-soon mb-20">
-<img src="assets/img/menu/home-1.jpg" alt>
-</div>
-<div class="home-img-content text-center">
-<h4 class=home-img-title>
-<a href="#">Coming Soon</a>
-</h4>
-</div>
-</div>
-</div>
-</div>
-</div>
-</li>
+
 <li class=has-dropdown>
-<a href="#">About Us</a>
+<a href="#">POS</a>
 <ul class="it-submenu submenu">
 <li><a href=about-v1.html>About Us V.1</a></li>
 <li><a href=about-v2.html>About Us V.2</a></li>
@@ -283,7 +101,7 @@ AI Text Generator
 </ul>
 </li>
 <li class="has-dropdown p-static">
-<a href="#">Pages</a>
+<a href="#">Add-Ons</a>
 <div class="it-submenu submenu it-megamenu-wrapper p-relative">
 <div class=it-megamenu-thumb>
 <img src="assets/img/menu/thumb.png" alt="">
@@ -334,7 +152,7 @@ AI Text Generator
 </div>
 </li>
 <li class=has-dropdown>
-<a href="#">Services</a>
+<a href="#">Outlet Types</a>
 <ul class="it-submenu submenu">
 <li><a href=service.html>Service</a></li>
 <li><a href=service-classic.html>Service Classic</a></li>
@@ -342,7 +160,7 @@ AI Text Generator
 </ul>
 </li>
 <li class=has-dropdown>
-<a href="#">Blog</a>
+<a href="#">Pricing</a>
 <ul class="it-submenu submenu">
 <li><a href=blog-two-columns.html>Blog Two Column</a></li>
 <li><a href=blog-three-columns.html>Blog Three Column</a></li>
@@ -354,7 +172,7 @@ AI Text Generator
 </ul>
 </li>
 <li class=has-dropdown>
-<a href="#">Contact</a>
+<a href="#">Resources</a>
 <ul class="it-submenu submenu">
 <li><a href=contact-v1.html>Contact V.1</a></li>
 <li><a href=contact-v2.html>Contact V.2</a></li>
@@ -366,9 +184,7 @@ AI Text Generator
 </div>
 <div class="col-xxl-3 col-xl-3 col-6">
 <div class="it-header-right-action d-flex justify-content-end align-items-center">
-<div class="it-header-search-box d-none d-md-block d-flex align-items-center mr-25">
-<a class=border-line-white href="#">Log In</a>
-</div>
+
 <a href="#demo" class="cr-btn d-none d-lg-block">
 Book A Demo
 </a>
@@ -447,6 +263,10 @@ Cancel anytime
 <div class=container>
 <div class=row>
 <div class=col-12>
+    <div class="ma-section-title-box text-center it-text-anim mb-60">
+        <h4 class="ma-section-title mb-15 it_text_reveal_anim">Trusted by 80,000+ restaurants</h4>
+        
+        </div>
 <div class="ss-brand-wrap mb-30">
 <div class="swiper-container ss-brand-active" dir=rtl>
 <div class="swiper-wrapper slider-transtion d-flex align-items-center">
