--- a/index-8.html
+++ b/index-8.html
@@ -368,10 +368,12 @@ Cancel anytime
 <div class="ss-about-right d-flex justify-content-end">
 <div>
 <div class="ma-section-title-box it-text-anim">
-<h4 class="ma-section-title pb-25 it_text_reveal_anim">A quick 3-click restaurant <span class="ma-about-style">billing </span>software</h4>
-<p class=mb-30>Explore our diverse industry solutions, meticulously crafted to meet unique demand. helps you be more.</p>
+<h4 class="ma-section-title pb-25 it_text_reveal_anim">A quick 3-click restaurant <span class="gl-color">billing </span>software</h4>
+<p class=mb-30>Take orders, punch bills and generate KOT. Accept payments either by splitting bill or merging tables. Easily apply discounts and coupons. All of this, and more, is easy and quick with Petpooja's restaurant POS.
+
+</p>
 </div>
-<div class="ss-about-funfact-wrap d-flex mb-45">
+<!-- <div class="ss-about-funfact-wrap d-flex mb-45">
 <div class="ss-about-funfact-item mr-75">
 <h5><i class=purecounter data-purecounter-duration=1 data-purecounter-end=121>0</i>+</h5>
 <span>We Develop Over <br>
@@ -382,9 +384,9 @@ Cancel anytime
 <span>Global Clients & <br>
 Trusted Us</span>
 </div>
-</div>
+</div> -->
 <div class="ss-about-btn it-fade-anim" data-fade-from=top data-delay=.5 data-ease=bounce>
-<a href=about-v1.html class="cr-btn hover-2">More Details</a>
+<a href="" class="cr-btn hover-2">Explore all features</a>
 </div>
 </div>
 </div>
@@ -421,10 +423,8 @@ Trusted Us</span>
     <div class="col-xl-6 col-lg-6">
     <div class=ma-marketing-left>
     <div class="ma-section-title-box it-text-anim mb-60">
-    <h4 class="ma-section-title mb-15 it_text_reveal_anim">Value of Marketing
-    Automation</h4>
-    <p>Use the information you have about your visitors to send <br>
-    segmented email campaigns about the process.</p>
+    <h4 class="ma-section-title mb-15 it_text_reveal_anim">Restaurant <span class="gl-color">Inventory </span>management made easier</h4>
+    <p>Do inventory management the smart way. Put your inventory on the item-wise auto deduction, get low-stock alters, day-end inventory reports and more with Petpooja restaurant POS</p>
     </div>
     <div class="ma-marketing-item-box d-flex mb-30">
     <div class=mr-50>
@@ -449,7 +449,7 @@ Trusted Us</span>
     </div>
     </div>
     </div>
-    <a href=signup.html class="cr-btn hover-2">Create Account </a>
+    <a href="" class="cr-btn hover-2">Explore all features</a>
     </div>
     </div>
     <div class="col-xl-6 col-lg-6 it-fade-anim" data-fade-from=right>
@@ -489,12 +489,10 @@ Trusted Us</span>
         <div class="col-xl-6 col-lg-6 order-0 order-lg-1">
         <div class=ma-software-right-box>
         <div class="ma-section-title-box it-text-anim mb-30">
-        <h4 class="ma-section-title mb-20 it_text_reveal_anim">Marketing Automation &
-        Inbound Marketing</h4>
-        <p>Use marketing automation to identify hot leads and email your
-        sales team telling them to follow up. Nurture and contact leads
-        at the opportune time to maximize conversions and boost your
-        product sales.</p>
+        <h4 class="ma-section-title mb-20 it_text_reveal_anim">Get real-time restaurant <span class="gl-color">Reports</span></h4>
+        <p>Automate your restaurant reports and go paper free! Let Petpooja POS automatically track your business activities and provide you error free reports on your restaurant’s day-end sales, online orders, staff actions, inventory consumption, and various 80+ essential business reports.
+
+        </p>
         </div>
         <div class="it-software-item-list mb-40">
         <ul>
@@ -565,15 +563,14 @@ Trusted Us</span>
             <div class=row>
             <div class="col-xl-5 col-lg-6">
             <div class="seo-section-title-box it-text-anim">
-            <h4 class="seo-section-title pb-15 it-split-text it-split-in-right">Frequently Asked
-            Questions</h4>
+            <h4 class="seo-section-title pb-15 it-split-text it-split-in-right">Add-ons to supercharge your Restaurant POS</h4>
             <p class=mb-30>Absolutely! One of our tools is a long-form article writer which is <br>
             specifically designed to generate unlimited content</p>
             <div class=pg-faq-content>
             <div class=seo-faq-nav-button>
             <ul class="nav nav-tab" id=myTab role=tablist>
             <li class=nav-items role=presentation>
-            <button class="nav-link active" id=Account-tab data-bs-toggle=tab data-bs-target="#Account" type=button role=tab aria-controls=Account aria-selected=true>Account</button>
+            <button class="nav-link active" id=Account-tab data-bs-toggle=tab data-bs-target="#Account" type=button role=tab aria-controls=Account aria-selected=true>CRM</button>
             </li>
             <li class=nav-items role=presentation>
             <button class=nav-link id=Members-tab data-bs-toggle=tab data-bs-target="#Members" type=button role=tab aria-controls=Members aria-selected=false>Members</button>
